--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,57 @@
+@import "https://unpkg.com/open-props";
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+figure {
+    background-image: url('../images/alphacolor-XdDyRTVo-iw-unsplash.jpg');
+    background-size: cover;
+    height: 100vh;
+    opacity: 0.8;
+    background-position: 80% 15%;
 
-
-header {
-    padding: 2rem;
+}
+.main-header {
+    display: flex;
+    justify-content: flex-end;
+    padding: 3rem;
 }
 
-h1 {
-    font-size: 3rem;
+.main-header h1 {
+    font-family: "Rock Salt", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--size-header-1);
+    background: var(--gradient-15);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    rotate: -5deg;
+    padding: 1rem;
+}
+
+main {
+    width: 100%;
+    float: right;
+}
+
+main aside {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 5rem 3rem 0;
+}
+
+main aside button {
+    padding: 1rem 1rem;
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--font-size-6);
+    border: var(--border-size-4) solid var(--gray-1);
+    color: var(--red-1);
 }
 
