--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,21 @@
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-figure {
-    background-image: url('../images/alphacolor-XdDyRTVo-iw-unsplash.jpg');
-    background-size: cover;
-    height: 100vh;
-    opacity: 0.8;
-    background-position: 80% 15%;
-
+:root {
+    --size-13: 13rem;
+    --size-12: 11rem;
+    --size-10: 10rem;
+    --size-9: 7.5rem;
+    --size-8: 6.5rem;
+    --size-7: 6.1rem;
+}
+img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: absolute;
+    top: 0;
 }
 .main-header {
     display: flex;
@@ -51,7 +59,109 @@ main aside {
     font-weight: 400;
     font-style: normal;
     font-size: var(--font-size-6);
-    border: var(--border-size-4) solid var(--gray-1);
+    border: var(--border-size-3) solid var(--gray-1);
     color: var(--red-1);
 }
 
+@media screen and (max-width: 1280px){
+    .main-header h1 {
+        font-size: var(--size-9);
+        margin-right: 2rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-4);
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .main-header {
+        padding: 0;
+        width:100%;
+    }
+    .main-header h1 {
+        font-size: var(--size-13);
+        margin-top: 6rem;
+        padding: 0;
+    }
+    main aside {
+        justify-content: center;
+        margin-top: 8rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-6);
+        margin-top: 7rem;
+    }
+}
+@media screen and (max-width: 820px) {
+    .main-header h1 {
+        font-size: var(--size-12);
+        margin-right: 3.5rem;
+        margin-top: 7rem;
+    }
+    main aside {
+        justify-content: center;
+        margin-top: 7rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-6);
+        margin-top: 7rem;
+    }
+}
+@media screen and (max-width: 768px) {
+    .main-header h1 {
+        font-size: var(--size-10);
+    }
+    #modal-trigger {
+        font-size: var(--font-size-5);
+        margin-top: 2rem;
+    }
+}
+@media screen and (max-width: 430px) {
+    .main-header h1 {
+        font-size: var(--size-8);
+        margin-right: 1rem;
+        margin-top: 4rem;
+    }
+    main aside {
+        justify-content: center;
+        margin-top: 10rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-5);
+        margin-top: 10rem;
+        border: var(--border-size-2) solid var(--gray-1);
+    }
+}
+
+@media screen and (max-width: 412px) {
+    .main-header h1 {
+        font-size: var(--size-8);
+        margin-right: 1rem;
+        margin-top: 4rem;
+    }
+    main aside {
+        justify-content: center;
+        margin-top: 9rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-5);
+        margin-top: 10rem;
+        border: var(--border-size-2) solid var(--gray-1);
+    }
+}
+@media screen and (max-width: 390px) {
+    .main-header h1 {
+        font-size: var(--size-7);
+        margin-right: 1rem;
+        margin-top: 6rem;
+    }
+    main aside {
+        justify-content: center;
+        margin-top: 8rem;
+    }
+    #modal-trigger {
+        font-size: var(--font-size-4);
+        margin-top: 8rem;
+        border: var(--border-size-2) solid var(--gray-1);
+    }
+};
