--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,72 @@
+@import "https://unpkg.com/open-props";
+
 h4{
     display: flex;
     justify-content: center;
+    font-family: "Rock Salt", cursive;
+    color: var(--red-1);
 }
 
-#header{
+h2{
+    font-family: "Rock Salt", cursive;
+    color: var(--red-1);
+}
+
+html{
+    background-color: #aa8a63;
+}
+
+article{
+    background-color: #aa8a63;
+}
+
+dialog footer{
+    background-color: #aa8a63;
+}
+
+#search{
     display: flex;
     justify-content: end;
 }
 
+#lyricsFrame{
+    color: var(--red-1);
+}
+
+#lyricContent{
+    color: var(--red-1);
+}
+
 #search-btn{
     width: 20%;
-    height: 100%;
+    height: 80%;
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--font-size-2);
+    border: var(--border-size-3) solid var(--gray-1);
+    color: var(--red-1);
+}
+
+#closeBtn{
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--font-size-2);
+    border: var(--border-size-3) solid var(--gray-1);
+    color: var(--red-1);
+}
+
+#modal-demo button{
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--font-size-2);
+    border: var(--border-size-3) solid var(--gray-1);
+    color: var(--red-1);
 }
 
 #modal-demo{
