removed search bar on second page and replaced it with a search menu like we have on the homepage where a user has to search for the name of the artist and song.Added a small amount of CSS so that the modal close button appears on the top right of the modal as an X.  Also changed the structure of the name of some elements so that its camal case

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,31 @@ h4 {
     justify-content: end;
 }
 
-#search-btn {
-    width: 20%;
-    height: 100%;
-}
-
 #modal-demo {
     margin-top: 20px;
     display: flex;
     justify-content: center;
+}
+
+/* Style for the modal header to position the title and button */
+.modalHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+/* Style the close button */
+#searchCloseBtn {
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #000;
+}
+
+/* Hover effect for the close button */
+#searchCloseBtn:hover {
+    color: gray;
 }
