--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -52,6 +52,11 @@ main aside {
     padding: 5rem 3rem 0;
 }
 
+strong{
+    font-family: "Rock Salt", cursive;
+    color: var(--pico-secondary-background)
+}
+
 #modal-trigger {
     padding: 1rem 1rem;
     font-family: "Caveat", cursive;
@@ -59,6 +64,16 @@ main aside {
     font-weight: 400;
     font-style: normal;
     font-size: var(--font-size-6);
+    border: var(--border-size-3) solid var(--gray-1);
+    color: var(--red-1);
+}
+
+#searchModalBtn{
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: var(--font-size-4);
     border: var(--border-size-3) solid var(--gray-1);
     color: var(--red-1);
 }
