--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,19 @@
 @import "https://unpkg.com/open-props";
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 
  h4 {
     display: flex;
     justify-content: center;
     font-family: "Rock Salt", cursive;
-    color: var(--red-1);
+    color: var(--pico-secondary-background)
 }
 
 h2{
     font-family: "Rock Salt", cursive;
-    color: var(--red-1);
+    color: var(--pico-secondary-background)
 }
 
-html{
+/* html{
     background-color: #aa8a63;
 }
 
@@ -22,7 +23,7 @@ html{
 
 dialog footer{
     background-color: #aa8a63;
-}
+} */
 
 
 #header{
@@ -31,16 +32,14 @@ dialog footer{
 }
 
 #lyricsFrame{
-    color: var(--red-1);
+    color: var(--pico-secondary-background)
 }
 
 #lyricContent{
-    color: var(--red-1);
+    color: var(--pico-secondary-background)
 }
 
 #searchModalBtn{
-    /* width: 20%;
-    height: 80%; */
     font-family: "Caveat", cursive;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -69,7 +68,7 @@ dialog footer{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-4);
     border: var(--border-size-3) solid var(--gray-1);
     color: var(--red-1);
 }
@@ -109,7 +108,7 @@ dialog footer{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-4);
     border: var(--border-size-3) solid var(--gray-1);
     color: var(--red-1);
 }
